Bug 963624 - Always release video's media buffer in ReleaseAllPendingVideoBuffersLocked() and same thread. r=doublec, a=1.3+